--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import Knap from "../pages/components/Knap.astro";
 ---
 
 <html lang="en">
@@ -12,5 +12,8 @@
   </head>
   <body>
     <h1>Hej med dig</h1>
+    <main>
+      <Knap text="read me" />
+    </main>
   </body>
 </html>
