--- a/src/pages/components/knap.astro
+++ b/src/pages/components/knap.astro
@@ -1,3 +1,22 @@
 ---
-
+const { text } = Astro.props;
 ---
+
+<button>
+  {text}
+</button>
+
+<style>
+  button {
+    background: linear-gradient(90deg, rgba(104, 218, 35, 1) 14%, rgba(76, 195, 91, 1) 65%, rgba(255, 251, 251, 1) 100%);
+    color: #140345;
+    border-radius: 2rem;
+    border-color: none;
+    height: 3rem;
+    width: 10rem;
+  }
+
+  button:hover {
+    background: linear-gradient(90deg, rgba(68, 16, 255, 1) 0%, rgba(163, 230, 123, 1) 76%, rgba(255, 251, 251, 1) 98%);
+  }
+</style>
