--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,6 @@ import Knap from "../pages/components/Knap.astro";
   </head>
   <body>
     <h1>Hej med dig</h1>
-    <main>
-      <Knap text="read me" />
-    </main>
+    <main></main>
   </body>
 </html>
