--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import Knap from "./components/knap.astro";
 ---
 
 <html lang="en">
@@ -12,6 +12,8 @@
   </head>
   <body>
     <h1>Hej med dig</h1>
-    <main></main>
+    <main>
+      <Knap text="read me" />
+    </main>
   </body>
 </html>
