--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Knap from "./components/knap.astro";
+import "../styles/style.css";
 ---
 
 <html lang="en">
@@ -8,6 +9,7 @@ import Knap from "./components/knap.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+
     <title>Astro</title>
   </head>
   <body>
