--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Knap from "../pages/components/Knap.astro";
+import Knap from "../pages/components/knap.astro";
 ---
 
 <html lang="en">
